log
Thu Oct 15 02:07:54 UTC 2020: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:53:11: error: expected identifier or ‘(’ before ‘,’ token
     int i,,j,k;
           ^
sudoku.c:55:11: error: ‘j’ undeclared (first use in this function)
       for(j=0; j<9 ;j++){
           ^
sudoku.c:55:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:15: error: ‘k’ undeclared (first use in this function)
           for(k=1; k<=9 ;k++){
               ^
sudoku.c:59:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             pushBack(lista,nuevo);
                      ^~~~~
                      list
sudoku.c:61:11: error: statement with no effect [-Werror=unused-value]
           n->sudo[i]j[]=0;
           ^
sudoku.c:61:21: error: expected ‘;’ before ‘j’
           n->sudo[i]j[]=0;
                     ^
cc1: all warnings being treated as errors
Compilation failed
Thu Oct 15 02:08:40 UTC 2020: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
71afe1a
Thu Oct 15 02:10:36 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
626af0f
Fri Oct 16 00:00:37 UTC 2020: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2ebc0c3
Fri Oct 16 00:03:53 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
615ceb0
Fri Oct 16 00:06:50 UTC 2020: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
64cc987
Fri Oct 16 00:21:52 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
a00e95a
Fri Oct 16 00:23:05 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8aa3251
Fri Oct 16 00:37:07 UTC 2020: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|4
total_score: 10/70
4ada48b
Fri Oct 16 00:37:47 UTC 2020: 
 sudoku.c | 15 +--------------
 1 file changed, 1 insertion(+), 14 deletions(-)
 tests:  3|3
total_score: 25/70
5fa97a4
Fri Oct 16 00:41:56 UTC 2020: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
7ce0b7c
Fri Oct 16 00:49:03 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
c01364d
Fri Oct 16 00:50:22 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
5ee7d56
Fri Oct 16 00:51:12 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
6a00030
Fri Oct 16 00:57:41 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
60fb335
Fri Oct 16 00:59:48 UTC 2020: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
a3ac72e
Fri Oct 16 01:00:41 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|3
total_score: 25/70
64037b0
Fri Oct 16 01:01:10 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
42c3e77
Fri Oct 16 01:01:31 UTC 2020: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  3|3
total_score: 25/70
897b727
Fri Oct 16 01:16:55 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
ded89fc
Fri Oct 16 14:10:43 UTC 2020: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
f96af11
Fri Oct 16 14:11:54 UTC 2020: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
7a78930
Fri Oct 16 14:13:50 UTC 2020: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|3
total_score: 25/70
c5008cf
Fri Oct 16 14:15:59 UTC 2020: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
730793b
Fri Oct 16 14:17:09 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
9d4a51a
Fri Oct 16 14:19:06 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
f8212bc
Fri Oct 16 14:19:43 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
a32d59c
Sat Oct 17 21:19:33 UTC 2020: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
9031de5
Sat Oct 17 21:19:44 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
17cd424
Sat Oct 17 21:20:11 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
37bce26
Sat Oct 17 21:20:48 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
ea7cc82
Sat Oct 17 21:22:46 UTC 2020: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|3
total_score: 30/70
01fdba2
Sat Oct 17 21:23:29 UTC 2020: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
2ca97e7
Sat Oct 17 21:26:26 UTC 2020: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4c7ab2c
Sat Oct 17 22:11:47 UTC 2020: 
 sudoku.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
ef46ebf
Sun Oct 18 15:37:30 UTC 2020: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
803e77c
Sun Oct 18 15:42:54 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
15cff09
Sun Oct 18 16:23:23 UTC 2020: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
89cacd9
Sun Oct 18 16:24:50 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
61cc120
Sun Oct 18 16:28:51 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
f054216
Sun Oct 18 16:36:31 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
73b2f42
Sun Oct 18 16:38:01 UTC 2020: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
d173c66
Sun Oct 18 16:39:36 UTC 2020: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d5bcebc
Sun Oct 18 16:41:22 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
52876ea
Sun Oct 18 16:41:51 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
6ded89d
Sun Oct 18 16:42:17 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
db24697
Sun Oct 18 16:44:36 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
65e3030
